# automation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  rentabilidade.csv  requirements.txt
.streamlit/: config.toml  secrets.toml
api/: app.py  model_api.py  test_app.py
api/controller/: home_controller.py
api/model/: csv_data_reader.py
api/route/: routes.py
api/server/: service.py
api/server/server/: interface.py
api/static/html/: index.html
app/data/: analysis.csv  lucro.csv  pedidos.csv  rentabilidade.csv
app/data/datasets/: app.py  data.xlsx
backend/server/: admin.py  lambda_function.py
frontend/: config.toml  debug.sh
frontend/error/: exceptions.py
frontend/src/pages/: about.py  analise_de_rentabilidade.py  cadastro.py  developer.py  estatisticaVendas.py  generate_insights.py  gerenciamento_estoque.py  help.py  historico_vendas.py  home.py  login.py  lucroCSV.py  marmitaMaisVendidas.py  marmitas.py  menu.py  pedidosSemana.py  relatorioFinanceiro.py  suporte.py  traducao.py
frontend/src/pages/CRUD/consult/: consultar.py  data_table.py  lucroEstabelecimento.py
frontend/src/pages/CRUD/delete/: deletaLucroEstabelecimento.py  deletar.py  (+1 more)
src/: main.py
src/gitProject/commands/: add_command.py  commit_command.py  push_command.py
src/gitProject/core/: commit_strategy.py  committer.py
src/gitProject/infrastructure/: file_manager.py  git_command_executor.py
src/gitProject/models/: commit.py
src/utils/: file_utils.py
(+5 files in other folders)
